tests/NormalTests/paczka1/fuzzy1/96577925.err
Error in line 2: fFJcx74 A555 96,5
Error in line 3: fFJcx74 S624 24,8
Error in line 9: gymtpR6r S717 68,7
Error in line 7: PAwJcF S717 83,6
Error in line 13: ro6bLwyA S717 21,3
Error in line 17: iRCJ S308 35,3
Error in line 24: ro6bLwyA S308 47,0
Error in line 28: iRCJ A555 60,1
Error in line 10: gymtpR6r A555 91,4
Error in line 34: S624 S308 3,1
